examples/test/testpolicy10460.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10460
  namespace: namespace461
spec:
  podSelector:
    matchLabels:
      key37: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value31
          key37: value23
      podSelector:
        matchLabels:
          key26: value31
          key19: value17
          key46: value47
